# nix-ai

./: .env.example  .envrc  .file-size.yml  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .release-please-manifest.json  .token-limits.yaml  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  osv-scanner.toml  renovate.json5
.claude/: settings.json  settings.local.json
.claude/rules/: plugin-cache-architecture.md
.github/: copilot-instructions.md  zizmor.yml
.github/scripts/: uv-lock-upgrade.sh
.github/workflows/: ai-all.yml  ai-ci.yml  ai-merge-gate.yml  ai-pr-care.yml  best-practices.yml  ci-doctor.lock.yml  ci-doctor.md  ci-gate.yml  code-simplifier.yml  copilot-setup-steps.yml  daily-malicious-code-scan.lock.yml  deps-update-flake.yml  dispatch-to-nix-darwin.yml  fix-renovate-hashes.yml  issue-auto-resolve.yml  issue-backlog-sweep.yml  issue-hygiene.yml  issue-sweeper.yml  link-checker.lock.yml  next-steps.yml  osv-scheduled.yml  repo-health-audit.lock.yml  retrigger-pr-checks.yml  sub-issue-closer.lock.yml  update-flake-input.yml  uv-lock-upgrade.yml  zz-test-backlog-min.yml  zz-test-backlog-reusable.yml
docs/: ai-tool-decision-tree.md
docs/adr/: 0002-activation-merge-pattern.md  0003-galileo-ai-observability.md  README.md
docs/architecture/: README.md  config-lifecycle.md  mlx-stack.md  model-discovery-flow.md  per-agent-flakes.md  plugin-scoping.md  secrets-and-injection.md  system-integration-map.md
docs/runbooks/: cluster-lifecycle.md  galileo-onboarding.md
flake/: home-manager-modules.nix  lib.nix
lib/: ai-stack-models.nix  checks.nix  homebrew.nix  python.nix  versions.nix
lib/checks/: agent-skills.nix  ai-stack.nix  antigravity-cli.nix  autonomous-profile.nix  claude.nix  codex.nix  fabric.nix  gemini.nix  helpers.nix  lint.nix  mcp.nix  mlx-catalog.nix  mlx-cluster.nix  (+5 more)
mlx-server/: pyproject.toml
modules/: ai-aliases.zsh  ai-shell.nix  ai-tools.nix  claude-config.nix  copilot.nix  default.nix  maintainer-profile.nix  open-webui.nix  user-defaults.nix
modules/cecli/: README.md  default.nix  options.nix  package.nix  packages.nix  pyproject.toml  settings.nix
orchestrator/: pyproject.toml
orchestrator/examples/skills/: code-explain.yaml  code-review.yaml  structured-extract.yaml  vault-search.yaml
orchestrator/examples/workflows/: code-review-pipeline.yaml
orchestrator/src/orchestrator/: prompts.py  skill_schema.py
orchestrator/src/orchestrator/workflows/: nodes.py
orchestrator/tests/: test_prompts.py  test_skill_schema.py  test_workflow_nodes.py
scripts/: check-fabric-version-sync.sh
vars/: ai-stack.nix
(+147 files in other folders)
