[project]
name = "orchestrator"
version = "0.1.0"
description = "Generic skill orchestration library with LangGraph and LlamaIndex"
requires-python = ">=3.14"
dependencies = [
  "harbor>=0.1.0",
  "langgraph>=0.4.0",
  # llama-index meta-package removed — it pulls llama-index-cli, llama-parse,
  # llama-cloud, and llms-openai which we don't use. Pin only what we need:
  "llama-index-core>=0.12.0",
  "llama-index-embeddings-openai>=0.3.0",
  "llama-index-vector-stores-faiss>=0.3.0",
  "openai>=1.82.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0",
  "faiss-cpu>=1.11.0",
  "numpy>=2.2.0",
  "sentence-transformers>=4.1.0",
]

[project.optional-dependencies]
qdrant = [
  "qdrant-client>=1.14.0",
  "llama-index-vector-stores-qdrant>=0.4.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.0",
  "ruff>=0.11.0",
]

[tool.uv]
# Security: LiteLLM 1.82.7 and 1.82.8 contained a supply-chain backdoor
# (credential stealer by TeamPCP, discovered 2026-03-24).
# Block compromised versions; allow future patched releases.
#
# Security: langsmith < 0.8.18 is affected by GHSA-f4xh-w4cj-qxq8 (CVSS 7.7).
# Pulled in transitively via langchain-core. Tracked in JacobPEvans/nix-ai#812.
constraint-dependencies = [
  "litellm!=1.82.7,!=1.82.8",
  "langsmith>=0.8.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=orchestrator --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["orchestrator"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__",
]
